feat: add sidebar component and enhance layout with smooth scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+* {
+  scroll-behavior: smooth;
+
+}
+
+
 body {
   min-height: calc(100vh - 100px);
   background-color: #ffffff;
